<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	tools:context=".Projeto1Activity" >
 
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="10dp"
	android:text="@string/numero1" />
 
<EditText
	android:id="@+id/txtNumero1"
	android:layout_width="110dp"
	android:layout_height="wrap_content"
	android:layout_marginLeft="15dp"
	android:inputType="number" />
 
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="15dp"
	android:text="@string/numero2" />
 
<EditText
	android:id="@+id/txtNumero2"
	android:layout_width="110dp"
	android:layout_height="wrap_content"
	android:layout_marginLeft="15dp"
	android:inputType="number" />

<Button
	android:id="@+id/btnSomar"
	android:layout_width="wrap_content"
	android:layout_height="35dp"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="10dp"
	android:text="@string/somar"
	android:textSize="15sp" />

<Button
	android:id="@+id/btnSubtrair"
	android:layout_width="wrap_content"
	android:layout_height="35dp"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="10dp"
	android:text="@string/subtrair"
	android:textSize="15sp" />

<Button
	android:id="@+id/btnMultiplicar"
	android:layout_width="wrap_content"
	android:layout_height="35dp"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="10dp"
	android:text="@string/multiplicar"
	android:textSize="15sp" />

<Button
	android:id="@+id/btnDividir"
	android:layout_width="wrap_content"
	android:layout_height="35dp"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="10dp"
	android:text="@string/dividir"
	android:textSize="15sp" />
 
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="25dp"
	android:text="@string/resultado" />

<TextView
	android:id="@+id/txtResultadoFinal"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="25dp"
	android:text="@string/resultado_final" />

<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="25dp"
	android:text="@string/nome_completo" />

<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginLeft="15dp"
	android:layout_marginTop="25dp"
	android:text="@string/ra_aluno" />
 
</LinearLayout>
